--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-.world
-a.toggle.toggle-night
-a.toggle-music
-audio.world-music(
-  src="https://res.cloudinary.com/liza/video/upload/v1492853426/sheep_qr3tus.m4a"
-)
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  <div class="world"></div><a class="toggle toggle-night"></a><a class="toggle-music"></a>
+<audio class="world-music" src="https://res.cloudinary.com/liza/video/upload/v1492853426/sheep_qr3tus.m4a"></audio>
+  </head>
+  <body>
+   
+</html>
